--- a/src/VentanaAux/AdministradorHorario.fxml
+++ b/src/VentanaAux/AdministradorHorario.fxml
@@ -1,15 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabColor.css" xmlns="http://javafx.com/javafx/8.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.AdministradorHorarioController">
+<JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabColor.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.AdministradorHorarioController">
    <tabs>
-      <Tab text="Horario">
+      <Tab text="Horarios">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+               <children>
+                  <TableView fx:id="tablaHorarios" prefHeight="368.0" prefWidth="600.0">
+                    <columns>
+                      <TableColumn fx:id="columnaId" prefWidth="157.0" text="ID" />
+                      <TableColumn fx:id="columnaDia" prefWidth="143.0" text="Día" />
+                        <TableColumn fx:id="columnaHoraApertura" prefWidth="147.0" text="Hora de apertura" />
+                        <TableColumn fx:id="columnaHoraCierre" prefWidth="152.0" text="Hora de cierre" />
+                    </columns>
+                  </TableView>
+               </children></AnchorPane>
         </content>
+      </Tab>
+      <Tab text="Editar horario">
+          <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+               <children>
+                  <Label layoutX="66.0" layoutY="42.0" text="ID del horario a editar:">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="66.0" layoutY="104.0" text="Día:">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="66.0" layoutY="171.0" text="Hora de apertura:">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="66.0" layoutY="237.0" text="Hora de cierre:">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtBuscarHorario" layoutX="264.0" layoutY="43.0" prefHeight="25.0" prefWidth="171.0" />
+                  <JFXTextField fx:id="txtDiaHorario" layoutX="264.0" layoutY="105.0" prefHeight="25.0" prefWidth="171.0" />
+                  <JFXTextField fx:id="txtHoraApertura" layoutX="264.0" layoutY="172.0" prefHeight="25.0" prefWidth="171.0" />
+                  <JFXTextField fx:id="txtHoraCierre" layoutX="265.0" layoutY="238.0" prefHeight="25.0" prefWidth="170.0" />
+                  <JFXButton fx:id="btnBuscarHorario" buttonType="RAISED" layoutX="469.0" layoutY="41.0" text="Buscar">
+                     <font>
+                        <Font name="System Bold Italic" size="13.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="btnGuardar" buttonType="RAISED" layoutX="180.0" layoutY="314.0" text="Guardar">
+                     <font>
+                        <Font name="System Bold Italic" size="13.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="btnCancelar" buttonType="RAISED" layoutX="350.0" layoutY="314.0" text="Cancelar">
+                     <font>
+                        <Font name="System Bold Italic" size="13.0" />
+                     </font>
+                  </JFXButton>
+               </children></AnchorPane>
+          </content>
       </Tab>
    </tabs>
 </JFXTabPane>
