--- a/src/VentanaAux/AdministradorHorario.fxml
+++ b/src/VentanaAux/AdministradorHorario.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TableColumn?>
@@ -10,18 +11,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabColor.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.AdministradorHorarioController">
+<JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.AdministradorHorarioController">
    <tabs>
       <Tab text="Horarios">
         <content>
 
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="600.0" style="-fx-background-color: #FFDBD9;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="600.0" style="-fx-background-color: #4BB5E7;">
                <children>
-                  <TableView fx:id="tablaHorarios" prefHeight="368.0" prefWidth="600.0" style="-fx-background-color: #FFDBD9;">
+                  <TableView fx:id="tablaHorarios" prefHeight="368.0" prefWidth="600.0" style="-fx-background-color: #4BB5E7;" stylesheets="@TabHorario.css">
 
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
-               <children>
-                  <TableView fx:id="tablaHorarios" prefHeight="368.0" prefWidth="600.0">
 
                     <columns>
                       <TableColumn fx:id="columnaId" prefWidth="157.0" text="ID" />
@@ -76,8 +74,15 @@
                         <Font name="System Bold Italic" size="13.0" />
                      </font>
                   </JFXButton>
-               </children></AnchorPane>
+               </children>
+              </AnchorPane>
           </content>
       </Tab>
-   </tabs>
+
+
+</tabs>
+   <stylesheets>
+      <URL value="@TabColor.css" />
+      <URL value="@TabHorario.css" />
+   </stylesheets>
 </JFXTabPane>
