--- a/src/VentanaAux/AdministradorMenu.fxml
+++ b/src/VentanaAux/AdministradorMenu.fxml
@@ -20,7 +20,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #E7CA9A;">
                <children>
-                  <TableView fx:id="tablaMenu" layoutX="-1.0" layoutY="1.0" prefHeight="323.0" prefWidth="600.0" stylesheets="@TabMenu.css">
+                  <TableView fx:id="tablaMenu" layoutX="-1.0" layoutY="32.0" prefHeight="292.0" prefWidth="600.0" stylesheets="@TabMenu.css">
                     <columns>
                       <TableColumn fx:id="colID" prefWidth="46.0" text="ID" />
                       <TableColumn fx:id="colNombre" prefWidth="119.0" text="Nombre" />
@@ -35,6 +35,8 @@
                         <Font name="System Bold Italic" size="13.0" />
                      </font>
                   </JFXButton>
+                  <JFXTextField fx:id="search" focusColor="#4a407c" layoutX="73.0" layoutY="6.0" prefHeight="25.0" prefWidth="513.0" style="-fx-background-color: #ffffff; -fx-border-radius: 20px;" unFocusColor="#ffffff00" />
+                  <Label layoutX="24.0" layoutY="10.0" prefHeight="17.0" prefWidth="38.0" text="Filtrar" />
                </children></AnchorPane>
         </content>
       </Tab>
@@ -157,7 +159,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #E7CA9A;">
                <children>
-                  <Label layoutX="44.0" layoutY="84.0" text="Ingresa nombre del menú a buscar:" textFill="#e19d65">
+                  <Label layoutX="74.0" layoutY="84.0" text="Ingresa ID del menú a buscar:" textFill="#e19d65">
                      <font>
                         <Font name="Arial Black" size="15.0" />
                      </font>
