--- a/src/VentanaAux/AdminUsuario.fxml
+++ b/src/VentanaAux/AdminUsuario.fxml
@@ -44,7 +44,7 @@
                         <AnchorPane id="AnchorPane" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="367.0" prefWidth="600.0">
                            <children>
                               <TextField fx:id="txtBuscarUsuario" layoutX="14.0" layoutY="55.0" prefHeight="27.0" prefWidth="391.0" />
-                              <TextField fx:id="txtMatricula" layoutX="15.0" layoutY="117.0" prefHeight="25.0" prefWidth="190.0" />
+                              <TextField fx:id="txtMatricula" disable="true" layoutX="15.0" layoutY="117.0" prefHeight="25.0" prefWidth="190.0" />
                               <Label layoutX="14.0" layoutY="20.0" stylesheets="@TabUsuario.css" text="Matrícula del usuario a editar">
                                  <font>
                                     <Font size="18.0" />
@@ -53,7 +53,7 @@
                               <Button fx:id="btnBuscarUsuario" layoutX="416.0" layoutY="56.0" mnemonicParsing="false" onAction="#buscarUsuario" prefHeight="25.0" prefWidth="163.0" text="Buscar" />
                               <TextField fx:id="txtNombre" layoutX="218.0" layoutY="116.0" prefHeight="27.0" prefWidth="365.0" />
                               <TextField fx:id="txtContrasena" layoutX="15.0" layoutY="184.0" prefHeight="27.0" prefWidth="190.0" />
-                              <TextField fx:id="txtBloqueo" editable="false" layoutX="15.0" layoutY="253.0" prefHeight="27.0" prefWidth="190.0" />
+                              <TextField fx:id="txtBloqueo" disable="true" editable="false" layoutX="15.0" layoutY="253.0" prefHeight="27.0" prefWidth="190.0" />
                               <Label layoutX="14.0" layoutY="90.0" text="Matrícula">
                                  <font>
                                     <Font size="18.0" />
@@ -85,7 +85,7 @@
                                     <Font size="18.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="txtTipo" editable="false" layoutX="218.0" layoutY="184.0" prefHeight="27.0" prefWidth="365.0" />
+                              <TextField fx:id="txtTipo" disable="true" editable="false" layoutX="218.0" layoutY="184.0" prefHeight="27.0" prefWidth="365.0" />
                               <Button fx:id="btnDesbloquearUsuario" layoutX="411.0" layoutY="253.0" mnemonicParsing="false" onAction="#desbloquearUsuario" prefHeight="25.0" prefWidth="172.0" text="Desbloquear usuario" textFill="#1ed727" />
                            </children>
                         </AnchorPane>
